Offlines/Offline3/Offline/CSubset_2205014Parser.cpp

// Generated from CSubset_2205014.g4 by ANTLR 4.13.2


#include "CSubset_2205014Visitor.h"

#include "CSubset_2205014Parser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct CSubset_2205014ParserStaticData final {
  CSubset_2205014ParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CSubset_2205014ParserStaticData(const CSubset_2205014ParserStaticData&) = delete;
  CSubset_2205014ParserStaticData(CSubset_2205014ParserStaticData&&) = delete;
  CSubset_2205014ParserStaticData& operator=(const CSubset_2205014ParserStaticData&) = delete;
  CSubset_2205014ParserStaticData& operator=(CSubset_2205014ParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag csubset_2205014ParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<CSubset_2205014ParserStaticData> csubset_2205014ParserStaticData = nullptr;

void csubset_2205014ParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (csubset_2205014ParserStaticData != nullptr) {
    return;
  }
#else
  assert(csubset_2205014ParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<CSubset_2205014ParserStaticData>(
    std::vector<std::string>{
      "start", "program", "unit", "func_declaration", "func_definition", 
      "parameter_list", "compound_statement", "var_declaration", "type_specifier", 
      "declaration_list", "statements", "statement", "expression_statement", 
      "variable", "expression", "logic_expression", "rel_expression", "simple_expression", 
      "term", "unary_expression", "factor", "argument_list", "arguments"
    },
    std::vector<std::string>{
      "", "", "", "", "", "'if'", "'else'", "'for'", "'while'", "'printf'", 
      "'return'", "'int'", "'float'", "'void'", "'('", "')'", "'{'", "'}'", 
      "'['", "']'", "';'", "','", "", "", "'++'", "'--'", "'!'", "", "", 
      "'='"
    },
    std::vector<std::string>{
      "", "LINE_COMMENT", "BLOCK_COMMENT", "STRING", "WS", "IF", "ELSE", 
      "FOR", "WHILE", "PRINTLN", "RETURN", "INT", "FLOAT", "VOID", "LPAREN", 
      "RPAREN", "LCURL", "RCURL", "LTHIRD", "RTHIRD", "SEMICOLON", "COMMA", 
      "ADDOP", "MULOP", "INCOP", "DECOP", "NOT", "RELOP", "LOGICOP", "ASSIGNOP", 
      "ID", "CONST_INT", "CONST_FLOAT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  csubset_2205014ParserStaticData = std::move(staticData);
}

}

CSubset_2205014Parser::CSubset_2205014Parser(TokenStream *input) : CSubset_2205014Parser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

CSubset_2205014Parser::CSubset_2205014Parser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  CSubset_2205014Parser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *csubset_2205014ParserStaticData->atn, csubset_2205014ParserStaticData->decisionToDFA, csubset_2205014ParserStaticData->sharedContextCache, options);
}

CSubset_2205014Parser::~CSubset_2205014Parser() {
  delete _interpreter;
}

const atn::ATN& CSubset_2205014Parser::getATN() const {
  return *csubset_2205014ParserStaticData->atn;
}

std::string CSubset_2205014Parser::getGrammarFileName() const {
  return "CSubset_2205014.g4";
}

const std::vector<std::string>& CSubset_2205014Parser::getRuleNames() const {
  return csubset_2205014ParserStaticData->ruleNames;
}

const dfa::Vocabulary& CSubset_2205014Parser::getVocabulary() const {
  return csubset_2205014ParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView CSubset_2205014Parser::getSerializedATN() const {
  return csubset_2205014ParserStaticData->serializedATN;
}


//----------------- StartContext ------------------------------------------------------------------

CSubset_2205014Parser::StartContext::StartContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CSubset_2205014Parser::ProgramContext* CSubset_2205014Parser::StartContext::program() {
  return getRuleContext<CSubset_2205014Parser::ProgramContext>(0);
}


size_t CSubset_2205014Parser::StartContext::getRuleIndex() const {
  return CSubset_2205014Parser::RuleStart;
}


std::any CSubset_2205014Parser::StartContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSubset_2205014Visitor*>(visitor))
    return parserVisitor->visitStart(this);
  else
    return visitor->visitChildren(this);
}

CSubset_2205014Parser::StartContext* CSubset_2205014Parser::start() {
  StartContext *_localctx = _tracker.createInstance<StartContext>(_ctx, getState());
  enterRule(_localctx, 0, CSubset_2205014Parser::RuleStart);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(46);
    program(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramContext ------------------------------------------------------------------

CSubset_2205014Parser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t CSubset_2205014Parser::ProgramContext::getRuleIndex() const {
  return CSubset_2205014Parser::RuleProgram;
}

void CSubset_2205014Parser::ProgramContext::copyFrom(ProgramContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ProgProgUnitContext ------------------------------------------------------------------

CSubset_2205014Parser::ProgramContext* CSubset_2205014Parser::ProgProgUnitContext::program() {
  return getRuleContext<CSubset_2205014Parser::ProgramContext>(0);
}

CSubset_2205014Parser::UnitContext* CSubset_2205014Parser::ProgProgUnitContext::unit() {
  return getRuleContext<CSubset_2205014Parser::UnitContext>(0);
}

CSubset_2205014Parser::ProgProgUnitContext::ProgProgUnitContext(ProgramContext *ctx) { copyFrom(ctx); }


std::any CSubset_2205014Parser::ProgProgUnitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSubset_2205014Visitor*>(visitor))
    return parserVisitor->visitProgProgUnit(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ProgUnitContext ------------------------------------------------------------------

CSubset_2205014Parser::UnitContext* CSubset_2205014Parser::ProgUnitContext::unit() {
  return getRuleContext<CSubset_2205014Parser::UnitContext>(0);
}

CSubset_2205014Parser::ProgUnitContext::ProgUnitContext(ProgramContext *ctx) { copyFrom(ctx); }


std::any CSubset_2205014Parser::ProgUnitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSubset_2205014Visitor*>(visitor))
    return parserVisitor->visitProgUnit(this);
  else
    return visitor->visitChildren(this);
}

CSubset_2205014Parser::ProgramContext* CSubset_2205014Parser::program() {
   return program(0);
}

CSubset_2205014Parser::ProgramContext* CSubset_2205014Parser::program(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  CSubset_2205014Parser::ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, parentState);
  CSubset_2205014Parser::ProgramContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 2;
  enterRecursionRule(_localctx, 2, CSubset_2205014Parser::RuleProgram, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    _localctx = _tracker.createInstance<ProgUnitContext>(_localctx);
    _ctx = _localctx;
    previousContext = _localctx;

    setState(49);
    unit();
    _ctx->stop = _input->LT(-1);
    setState(55);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        auto newContext = _tracker.createInstance<ProgProgUnitContext>(_tracker.createInstance<ProgramContext>(parentContext, parentState));
        _localctx = newContext;
        pushNewRecursionContext(newContext, startState, RuleProgram);
        setState(51);

        if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
        setState(52);
        unit(); 
      }
      setState(57);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- UnitContext ------------------------------------------------------------------

CSubset_2205014Parser::UnitContext::UnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t CSubset_2205014Parser::UnitContext::getRuleIndex() const {
  return CSubset_2205014Parser::RuleUnit;
}

void CSubset_2205014Parser::UnitContext::copyFrom(UnitContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- UnitFuncDefContext ------------------------------------------------------------------

CSubset_2205014Parser::Func_definitionContext* CSubset_2205014Parser::UnitFuncDefContext::func_definition() {
  return getRuleContext<CSubset_2205014Parser::Func_definitionContext>(0);
}

CSubset_2205014Parser::UnitFuncDefContext::UnitFuncDefContext(UnitContext *ctx) { copyFrom(ctx); }


std::any CSubset_2205014Parser::UnitFuncDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSubset_2205014Visitor*>(visitor))
    return parserVisitor->visitUnitFuncDef(this);
  else
    return visitor->visitChildren(this);
}
//----------------- UnitFuncDecContext ------------------------------------------------------------------

CSubset_2205014Parser::Func_declarationContext* CSubset_2205014Parser::UnitFuncDecContext::func_declaration() {
  return getRuleContext<CSubset_2205014Parser::Func_declarationContext>(0);
}

CSubset_2205014Parser::UnitFuncDecContext::UnitFuncDecContext(UnitContext *ctx) { copyFrom(ctx); }


std::any CSubset_2205014Parser::UnitFuncDecContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSubset_2205014Visitor*>(visitor))
    return parserVisitor->visitUnitFuncDec(this);
  else
    return visitor->visitChildren(this);
}
//----------------- UnitVarDecContext ------------------------------------------------------------------

CSubset_2205014Parser::Var_declarationContext* CSubset_2205014Parser::UnitVarDecContext::var_declaration() {
  return getRuleContext<CSubset_2205014Parser::Var_declarationContext>(0);
}

CSubset_2205014Parser::UnitVarDecContext::UnitVarDecContext(UnitContext *ctx) { copyFrom(ctx); }


std::any CSubset_2205014Parser::UnitVarDecContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSubset_2205014Visitor*>(visitor))
    return parserVisitor->visitUnitVarDec(this);
  else
    return visitor->visitChildren(this);
}
CSubset_2205014Parser::UnitContext* CSubset_2205014Parser::unit() {
  UnitContext *_localctx = _tracker.createInstance<UnitContext>(_ctx, getState());
  enterRule(_localctx, 4, CSubset_2205014Parser::RuleUnit);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(61);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<CSubset_2205014Parser::UnitVarDecContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(58);
      var_declaration();
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<CSubset_2205014Parser::UnitFuncDecContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(59);
      func_declaration();
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<CSubset_2205014Parser::UnitFuncDefContext>(_localctx);
      enterOuterAlt(_localctx, 3);
      setState(60);
      func_definition();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Func_declarationContext ------------------------------------------------------------------

CSubset_2205014Parser::Func_declarationContext::Func_declarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t CSubset_2205014Parser::Func_declarationContext::getRuleIndex() const {
  return CSubset_2205014Parser::RuleFunc_declaration;
}

void CSubset_2205014Parser::Func_declarationContext::copyFrom(Func_declarationContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- FuncDecNoParamContext ------------------------------------------------------------------

CSubset_2205014Parser::Type_specifierContext* CSubset_2205014Parser::FuncDecNoParamContext::type_specifier() {
  return getRuleContext<CSubset_2205014Parser::Type_specifierContext>(0);
}

tree::TerminalNode* CSubset_2205014Parser::FuncDecNoParamContext::ID() {
  return getToken(CSubset_2205014Parser::ID, 0);
}

tree::TerminalNode* CSubset_2205014Parser::FuncDecNoParamContext::LPAREN() {
  return getToken(CSubset_2205014Parser::LPAREN, 0);
}

tree::TerminalNode* CSubset_2205014Parser::FuncDecNoParamContext::RPAREN() {
  return getToken(CSubset_2205014Parser::RPAREN, 0);
}

tree::TerminalNode* CSubset_2205014Parser::FuncDecNoParamContext::SEMICOLON() {
  return getToken(CSubset_2205014Parser::SEMICOLON, 0);
}

CSubset_2205014Parser::FuncDecNoParamContext::FuncDecNoParamContext(Func_declarationContext *ctx) { copyFrom(ctx); }


std::any CSubset_2205014Parser::FuncDecNoParamContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSubset_2205014Visitor*>(visitor))
    return parserVisitor->visitFuncDecNoParam(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FuncDecParamContext ------------------------------------------------------------------

CSubset_2205014Parser::Type_specifierContext* CSubset_2205014Parser::FuncDecParamContext::type_specifier() {
  return getRuleContext<CSubset_2205014Parser::Type_specifierContext>(0);
}

tree::TerminalNode* CSubset_2205014Parser::FuncDecParamContext::ID() {
  return getToken(CSubset_2205014Parser::ID, 0);
}

tree::TerminalNode* CSubset_2205014Parser::FuncDecParamContext::LPAREN() {
  return getToken(CSubset_2205014Parser::LPAREN, 0);
}

CSubset_2205014Parser::Parameter_listContext* CSubset_2205014Parser::FuncDecParamContext::parameter_list() {
  return getRuleContext<CSubset_2205014Parser::Parameter_listContext>(0);
}

tree::TerminalNode* CSubset_2205014Parser::FuncDecParamContext::RPAREN() {
  return getToken(CSubset_2205014Parser::RPAREN, 0);
}

tree::TerminalNode* CSubset_2205014Parser::FuncDecParamContext::SEMICOLON() {
  return getToken(CSubset_2205014Parser::SEMICOLON, 0);
}

CSubset_2205014Parser::FuncDecParamContext::FuncDecParamContext(Func_declarationContext *ctx) { copyFrom(ctx); }


std::any CSubset_2205014Parser::FuncDecParamContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSubset_2205014Visitor*>(visitor))
    return parserVisitor->visitFuncDecParam(this);
  else
    return visitor->visitChildren(this);
}
CSubset_2205014Parser::Func_declarationContext* CSubset_2205014Parser::func_declaration() {
  Func_declarationContext *_localctx = _tracker.createInstance<Func_declarationContext>(_ctx, getState());
  enterRule(_localctx, 6, CSubset_2205014Parser::RuleFunc_declaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(76);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<CSubset_2205014Parser::FuncDecParamContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(63);
      type_specifier();
      setState(64);
      match(CSubset_2205014Parser::ID);
      setState(65);
      match(CSubset_2205014Parser::LPAREN);
      setState(66);
      parameter_list(0);
      setState(67);
      match(CSubset_2205014Parser::RPAREN);
      setState(68);
      match(CSubset_2205014Parser::SEMICOLON);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<CSubset_2205014Parser::FuncDecNoParamContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(70);
      type_specifier();
      setState(71);
      match(CSubset_2205014Parser::ID);
      setState(72);
      match(CSubset_2205014Parser::LPAREN);
      setState(73);
      match(CSubset_2205014Parser::RPAREN);
      setState(74);
      match(CSubset_2205014Parser::SEMICOLON);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Func_definitionContext ------------------------------------------------------------------

CSubset_2205014Parser::Func_definitionContext::Func_definitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t CSubset_2205014Parser::Func_definitionContext::getRuleIndex() const {
  return CSubset_2205014Parser::RuleFunc_definition;
}

void CSubset_2205014Parser::Func_definitionContext::copyFrom(Func_definitionContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- FuncDefNoParamContext ------------------------------------------------------------------

CSubset_2205014Parser::Type_specifierContext* CSubset_2205014Parser::FuncDefNoParamContext::type_specifier() {
  return getRuleContext<CSubset_2205014Parser::Type_specifierContext>(0);
}

tree::TerminalNode* CSubset_2205014Parser::FuncDefNoParamContext::ID() {
  return getToken(CSubset_2205014Parser::ID, 0);
}

tree::TerminalNode* CSubset_2205014Parser::FuncDefNoParamContext::LPAREN() {
  return getToken(CSubset_2205014Parser::LPAREN, 0);
}

tree::TerminalNode* CSubset_2205014Parser::FuncDefNoParamContext::RPAREN() {
  return getToken(CSubset_2205014Parser::RPAREN, 0);
}

CSubset_2205014Parser::Compound_statementContext* CSubset_2205014Parser::FuncDefNoParamContext::compound_statement() {
  return getRuleContext<CSubset_2205014Parser::Compound_statementContext>(0);
}

CSubset_2205014Parser::FuncDefNoParamContext::FuncDefNoParamContext(Func_definitionContext *ctx) { copyFrom(ctx); }


std::any CSubset_2205014Parser::FuncDefNoParamContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSubset_2205014Visitor*>(visitor))
    return parserVisitor->visitFuncDefNoParam(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FuncDefParamContext ------------------------------------------------------------------

CSubset_2205014Parser::Type_specifierContext* CSubset_2205014Parser::FuncDefParamContext::type_specifier() {
  return getRuleContext<CSubset_2205014Parser::Type_specifierContext>(0);
}

tree::TerminalNode* CSubset_2205014Parser::FuncDefParamContext::ID() {
  return getToken(CSubset_2205014Parser::ID, 0);
}

tree::TerminalNode* CSubset_2205014Parser::FuncDefParamContext::LPAREN() {
  return getToken(CSubset_2205014Parser::LPAREN, 0);
}

CSubset_2205014Parser::Parameter_listContext* CSubset_2205014Parser::FuncDefParamContext::parameter_list() {
  return getRuleContext<CSubset_2205014Parser::Parameter_listContext>(0);
}

tree::TerminalNode* CSubset_2205014Parser::FuncDefParamContext::RPAREN() {
  return getToken(CSubset_2205014Parser::RPAREN, 0);
}

CSubset_2205014Parser::Compound_statementContext* CSubset_2205014Parser::FuncDefParamContext::compound_statement() {
  return getRuleContext<CSubset_2205014Parser::Compound_statementContext>(0);
}

CSubset_2205014Parser::FuncDefParamContext::FuncDefParamContext(Func_definitionContext *ctx) { copyFrom(ctx); }


std::any CSubset_2205014Parser::FuncDefParamContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSubset_2205014Visitor*>(visitor))
    return parserVisitor->visitFuncDefParam(this);
  else
    return visitor->visitChildren(this);
}
CSubset_2205014Parser::Func_definitionContext* CSubset_2205014Parser::func_definition() {
  Func_definitionContext *_localctx = _tracker.createInstance<Func_definitionContext>(_ctx, getState());
  enterRule(_localctx, 8, CSubset_2205014Parser::RuleFunc_definition);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(91);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<CSubset_2205014Parser::FuncDefParamContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(78);
      type_specifier();
      setState(79);
      match(CSubset_2205014Parser::ID);
      setState(80);
      match(CSubset_2205014Parser::LPAREN);
      setState(81);
      parameter_list(0);
      setState(82);
      match(CSubset_2205014Parser::RPAREN);
      setState(83);
      compound_statement();
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<CSubset_2205014Parser::FuncDefNoParamContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(85);
      type_specifier();
      setState(86);
      match(CSubset_2205014Parser::ID);
      setState(87);
      match(CSubset_2205014Parser::LPAREN);
      setState(88);
      match(CSubset_2205014Parser::RPAREN);
      setState(89);
      compound_statement();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Parameter_listContext ------------------------------------------------------------------

CSubset_2205014Parser::Parameter_listContext::Parameter_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t CSubset_2205014Parser::Parameter_listContext::getRuleIndex() const {
  return CSubset_2205014Parser::RuleParameter_list;
}

void CSubset_2205014Parser::Parameter_listContext::copyFrom(Parameter_listContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- UniParamDefContext ------------------------------------------------------------------

CSubset_2205014Parser::Type_specifierContext* CSubset_2205014Parser::UniParamDefContext::type_specifier() {
  return getRuleContext<CSubset_2205014Parser::Type_specifierContext>(0);
}

tree::TerminalNode* CSubset_2205014Parser::UniParamDefContext::ID() {
  return getToken(CSubset_2205014Parser::ID, 0);
}

CSubset_2205014Parser::UniParamDefContext::UniParamDefContext(Parameter_listContext *ctx) { copyFrom(ctx); }


std::any CSubset_2205014Parser::UniParamDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSubset_2205014Visitor*>(visitor))
    return parserVisitor->visitUniParamDef(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MultiParamDecContext ------------------------------------------------------------------

CSubset_2205014Parser::Parameter_listContext* CSubset_2205014Parser::MultiParamDecContext::parameter_list() {
  return getRuleContext<CSubset_2205014Parser::Parameter_listContext>(0);
}

tree::TerminalNode* CSubset_2205014Parser::MultiParamDecContext::COMMA() {
  return getToken(CSubset_2205014Parser::COMMA, 0);
}

CSubset_2205014Parser::Type_specifierContext* CSubset_2205014Parser::MultiParamDecContext::type_specifier() {
  return getRuleContext<CSubset_2205014Parser::Type_specifierContext>(0);
}

CSubset_2205014Parser::MultiParamDecContext::MultiParamDecContext(Parameter_listContext *ctx) { copyFrom(ctx); }


std::any CSubset_2205014Parser::MultiParamDecContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSubset_2205014Visitor*>(visitor))
    return parserVisitor->visitMultiParamDec(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MultiParamADDOPContext ------------------------------------------------------------------

CSubset_2205014Parser::Parameter_listContext* CSubset_2205014Parser::MultiParamADDOPContext::parameter_list() {
  return getRuleContext<CSubset_2205014Parser::Parameter_listContext>(0);
}

tree::TerminalNode* CSubset_2205014Parser::MultiParamADDOPContext::COMMA() {
  return getToken(CSubset_2205014Parser::COMMA, 0);
}

CSubset_2205014Parser::Type_specifierContext* CSubset_2205014Parser::MultiParamADDOPContext::type_specifier() {
  return getRuleContext<CSubset_2205014Parser::Type_specifierContext>(0);
}

tree::TerminalNode* CSubset_2205014Parser::MultiParamADDOPContext::ADDOP() {
  return getToken(CSubset_2205014Parser::ADDOP, 0);
}

tree::TerminalNode* CSubset_2205014Parser::MultiParamADDOPContext::MULOP() {
  return getToken(CSubset_2205014Parser::MULOP, 0);
}

tree::TerminalNode* CSubset_2205014Parser::MultiParamADDOPContext::RELOP() {
  return getToken(CSubset_2205014Parser::RELOP, 0);
}

tree::TerminalNode* CSubset_2205014Parser::MultiParamADDOPContext::LOGICOP() {
  return getToken(CSubset_2205014Parser::LOGICOP, 0);
}

CSubset_2205014Parser::MultiParamADDOPContext::MultiParamADDOPContext(Parameter_listContext *ctx) { copyFrom(ctx); }


std::any CSubset_2205014Parser::MultiParamADDOPContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSubset_2205014Visitor*>(visitor))
    return parserVisitor->visitMultiParamADDOP(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MultiParamDefContext ------------------------------------------------------------------

CSubset_2205014Parser::Parameter_listContext* CSubset_2205014Parser::MultiParamDefContext::parameter_list() {
  return getRuleContext<CSubset_2205014Parser::Parameter_listContext>(0);
}

tree::TerminalNode* CSubset_2205014Parser::MultiParamDefContext::COMMA() {
  return getToken(CSubset_2205014Parser::COMMA, 0);
}
